err/nwsclient.err
Listing '.'...
Listing './bin'...
Compiling './bin/PythonNWSSleighWorker.py'...
***   File "./bin/PythonNWSSleighWorker.py", line 111
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nws'...
Compiling './lib/python3.5/site-packages/nws/babelfish.py'...
***   File "./lib/python3.5/site-packages/nws/babelfish.py", line 38
    except NwsUnpicklingException, e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nws/client.py'...
***   File "./lib/python3.5/site-packages/nws/client.py", line 713
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nws/sleigh.py'...
***   File "./lib/python3.5/site-packages/nws/sleigh.py", line 404
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nws/util.py'...
***   File "./lib/python3.5/site-packages/nws/util.py", line 90
    print "quoted command string:", msc_argv2str(argv)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nwsclient-1.6.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './nws-python'...
Listing './nws-python/examples'...
Compiling './nws-python/examples/batchqueueing.py'...
***   File "./nws-python/examples/batchqueueing.py", line 18
    print "Submitted via LSF"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/bcmd.py'...
***   File "./nws-python/examples/bcmd.py", line 32
    print '>',
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/chat.py'...
Compiling './nws-python/examples/chat2.py'...
Compiling './nws-python/examples/chat3.py'...
***   File "./nws-python/examples/chat3.py", line 81
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Compiling './nws-python/examples/exp.py'...
***   File "./nws-python/examples/exp.py", line 16
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Compiling './nws-python/examples/hello.py'...
***   File "./nws-python/examples/hello.py", line 14
    print "hello: iterations:", count
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/longvalue.py'...
***   File "./nws-python/examples/longvalue.py", line 66
    print "Storing %s to server..." % fname
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/ncp.py'...
***   File "./nws-python/examples/ncp.py", line 49
    print var
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/nonblocking.py'...
***   File "./nws-python/examples/nonblocking.py", line 57
    print result[0], 'times 2 is', result[1]
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/nwsExample.py'...
***   File "./nws-python/examples/nwsExample.py", line 7
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './nws-python/examples/parallel.py'...
***   File "./nws-python/examples/parallel.py", line 15
    print "using scriptDir =", scriptDir
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/ping.py'...
***   File "./nws-python/examples/ping.py", line 20
    print "Ping-pong server '%s' starting" % wsname
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/pong.py'...
***   File "./nws-python/examples/pong.py", line 31
    print "Starting a ping-pong game", game
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/pping.py'...
***   File "./nws-python/examples/pping.py", line 84
    print "warning: using default nodeList:", defaultNodeList
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/ring.py'...
***   File "./nws-python/examples/ring.py", line 76
    print "Master assigned rank %d" % SleighRank
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/sleighdemo.py'...
***   File "./nws-python/examples/sleighdemo.py", line 73
    print "warning: using default nodeList:", defaultNodeList
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './nws-python/examples/store.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (store.py, line 42)
Compiling './nws-python/examples/worker.py'...
***   File "./nws-python/examples/worker.py", line 17
    print worker('foo', 'localhost', 8765)
               ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
